@@ -1,2 +1,18 @@
 # mymail
 mymail
+
+
+
+
+
+--add-reads
+org.robinsonpn=ALL-UNNAMED
+--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls
+--add-opens
+javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+--add-opens
+javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+--add-opens
+javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+--add-opens
+javafx.base/com.sun.javafx.logging=ALL-UNNAMED
